--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- for css  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="container">
@@ -60,6 +62,61 @@
         </section>
 
         <!-- end navbar-->
+
+        <!-- slide show start  -->
+
+        <section class="my-4 mx-2">
+
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active slide-bg">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                            <h1 class="fs-1">Get Started Digital<br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable<br>
+                                content of
+                                a page when looking at its layout.</p>
+                            <button type="button" class="btn btn-primary px-4">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                            <h1>Get Started Digital<br> Learning</h1>
+                            <p class="my-3">It is a long established fact that a reader will be distracted by the
+                                readable
+                                <br>content of
+                                a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-primary px-4 my-3">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                            <h1>Get Started Digital<br> Learning</h1>
+                            <p>It is a long established fact that a reader will be distracted by the readable
+                                <br>content of
+                                a page when looking at its layout.
+                            </p>
+                            <button type="button" class="btn btn-primary px-4">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- slide show end  -->
     </header>
     <!-- header end -->
 
