--- a/index.html
+++ b/index.html
@@ -18,44 +18,40 @@
         <!-- start navbar -->
 
         <section>
-            <nav class="navbar navbar-expand-lg ">
-                <div class="container ">
-                    <div>
-                        <a class="navbar-brand h1 fw-bold" href="#">Pro Edu</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                    </div>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand fw-bold" href="#">Pro Edu</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Courses</a>
+                                <a class="nav-link" href="#">Courses</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Deals</a>
+                                <a class="nav-link" href="#">Deals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Success</a>
+                                <a class="nav-link" href="#">Success</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">About</a>
+                                <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Register</a>
+                                <a class="nav-link" href="#">Register</a>
                             </li>
 
                         </ul>
-                        <div>
-                            <form class="d-flex" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-dark" type="submit">Search</button>
-                            </form>
-                        </div>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-dark" type="submit">Search</button>
+                        </form>
                     </div>
                 </div>
             </nav>
@@ -119,6 +115,170 @@
         <!-- slide show end  -->
     </header>
     <!-- header end -->
+
+    <!-- main start  -->
+
+    <main>
+        <!-- courses start  -->
+
+        <section class="my-5">
+            <h1 class="text-center">
+                Discover Our Popular <br>Courses
+            </h1>
+            <p class="text-center mb-5">
+                It is a long established fact that a reader will be distracted by the readable<br> content of a page
+                when
+                looking at its layout.
+            </p>
+            <div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Javascript Basic to advanced</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Fullstack Web Development</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Digital Marketing</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Photography Basic Rules</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card mb-3" style="max-width: 648px;">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Motion Graphics</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card.
+                                        </p>
+                                        <h5 class="text-primary">
+                                            Price: $20
+                                        </h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="d-flex justify-content-center my-3">
+                            <button type="button" class="btn btn-primary px-5">See All</button>
+                        </div>
+
+
+
+
+        </section>
+
+        <!-- courses end  -->
+    </main>
+
+    <!-- main end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
