--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
@@ -67,7 +67,8 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active slide-bg">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                        <div
+                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
                             <h1 class="fs-1">Get Started Digital<br> Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable<br>
                                 content of
@@ -77,7 +78,8 @@
                     </div>
                     <div class="carousel-item ">
                         <img src="images/cover/cover-2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                        <div
+                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
                             <h1>Get Started Digital<br> Learning</h1>
                             <p class="my-3">It is a long established fact that a reader will be distracted by the
                                 readable
@@ -89,7 +91,8 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-flex align-items-center text-center d-md-block w-auto h-75">
+                        <div
+                            class="carousel-caption d-flex d-lg-flex d-sm-flex flex-sm-column flex-column justify-content-sm-center align-items-lg-center justify-content-center align-items-center text-center d-md-block w-auto h-75">
                             <h1>Get Started Digital<br> Learning</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable
                                 <br>content of
@@ -132,11 +135,12 @@
             </p>
             <div>
                 <div class="row">
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12 col-12">
+                        <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                                <div class="col-md-4 col-12">
+                                    <img src="images/course/course-1.png"
+                                        class="img-lg-fluid img-md-fluid rounded-start w-sm-100%" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -155,8 +159,8 @@
 
 
 
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
@@ -178,8 +182,8 @@
 
 
 
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
@@ -201,8 +205,8 @@
 
 
 
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3" style="max-width:100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
@@ -225,8 +229,8 @@
 
 
 
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
@@ -245,8 +249,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="card mb-3" style="max-width: 648px;">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="card mb-3" style="max-width: 100%;">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
@@ -276,6 +280,94 @@
         </section>
 
         <!-- courses end  -->
+
+        <!-- explore start  -->
+
+        <section>
+            <div class="card mb-3 w-100">
+                <div class="row g-0">
+                    <div class="col-lg-6 col-md-4">
+                        <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-lg-6 col-md-8 d-flex  justify-content-center align-items-center bg-Secondary">
+                        <div class="card-body ">
+                            <h1 class="card-title my-5">Explore The elearning </h1>
+                            <p class="card-text">Are you an eLearning professional who wants to make screencasts for
+                                training courses? Or are you going to start your vlog on YouTube and show how to use
+                                specific software? In this article, we’ll explain how to screencast, which tools to
+                                choose, and what to consider before recording. Screen recording software now enable
+                                screencasting on any type of device, even on smartphones. For example, there are plenty
+                                of screen recording and screen mirroring apps for iOS and Android that help bloggers
+                                make screencast videos on the go.</p>
+                            <div class="mt-5 mb-3">
+                                <div class="row">
+                                    <div class="col-lg-4 col-md-5 col-6">
+                                        <h1>3.2k+</h1>
+                                        <p>Online Course</p>
+                                    </div>
+                                    <div class="col-lg-4 col-md-5 col-6">
+                                        <h1>3.2k+</h1>
+                                        <p>Online Course</p>
+                                    </div>
+                                    <div class="col-lg-4 col-md-5 col-6">
+                                        <h1>3.2k+</h1>
+                                        <p>Online Course</p>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <button type="button" class="btn btn-primary px-3">Read More</button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- explore end  -->
+
+        <!-- modal start  -->
+
+        <section
+            class="bg-primary my-5 py-5 d-flex flex-column text-center text-sm-center flex-sm-column flex-lg-row justify-content-evenly text-lg-start align-items-center">
+            <div class="text-white">
+                <h3>Ready to join?</h3>
+                <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page
+                    when
+                    looking at its layout.</p>
+            </div>
+            <div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary bg-white text-primary fw-bold" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Register Now
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Are yoy wanted to register?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                If you wanted please click on yes<br> otherwise click on no
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                <button type="button" class="btn btn-primary">Yes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- modal end  -->
+
     </main>
 
     <!-- main end -->
