--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="row g-0">
                                 <div class="col-md-4 col-12">
                                     <img src="images/course/course-1.png"
-                                        class="img-lg-fluid img-md-fluid rounded-start w-sm-100%" alt="...">
+                                        class="img-lg-fluid img-md-fluid rounded-start " alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -367,6 +367,159 @@
         </section>
 
         <!-- modal end  -->
+
+        <!-- Successfull part -->
+
+        <section class="my-5">
+            <div>
+                <h3 class="fw-bold">Meet Our Successfull<br> Students</h3>
+                <p>
+                    It is a long established fact that a reader will be distracted by the<br> readable content of a page
+                    when
+                    looking at its layout.
+                </p>
+            </div>
+            <div class="my-5">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Awlad Hossain</h5>
+                                <p class="card-text">UIUX Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Jannatul Islam</h5>
+                                <p class="card-text">Motion Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Imran Hossain</h5>
+                                <p class="card-text">Graphic Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card">
+                            <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Nishi Akter</h5>
+                                <p class="card-text">Web Developer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center my-3">
+                <button type="button" class="btn btn-primary px-5">See All</button>
+            </div>
+        </section>
+        <!-- Successfull end -->
+
+        <!-- start accordion -->
+
+        <section class="my-5">
+            <div class="text-center m-auto">
+                <h2>Frequently Asked Questions</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable<br> content of a page
+                    when
+                    looking at its layout.</p>
+            </div>
+            <div class="mx-auto">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingOne">
+                            <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                What's the difference between Flex and grid?
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The most important thing to know is that flexbox is one-dimensional, while CSS Grid is
+                                two-dimensional. Flexbox lays out items along either the horizontal or the vertical
+                                axis, so you have to decide whether you want a row-based or a column-based layout. The
+                                flexbox cross axis is always perpendicular to the main axis.A flex layout can also wrap
+                                in multiple rows or columns and flexbox treats each row or column as a separate entity,
+                                based on its content and the available space.
+
+                                On the other hand, CSS Grid lets you work along two axes: horizontally and vertically.
+                                Grid allows you to create two-dimensional layouts where you can precisely place grid
+                                items into cells defined by rows and columns.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingTwo">
+                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                What's the difference between Bootstrap and Tailwind?
+                            </button>
+                        </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                Developers describe Bootstrap as "Simple and flexible HTML, CSS, and JS for popular UI
+                                components and interactions". Bootstrap is the most popular HTML, CSS, and JS framework
+                                for developing responsive, mobile first projects on the web. On the other hand, Tailwind
+                                CSS is detailed as "A utility-first CSS framework for rapid UI development". Tailwind is
+                                different from frameworks like Bootstrap, Foundation, or Bulma in that it's not a UI
+                                kit. It doesn't have a default theme, and there are no build-in UI components. It comes
+                                with a menu of predesigned widgets to build your site with, but doesn't impose design
+                                decisions that are difficult to undo.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                what is the css box-model?
+                            </button>
+                        </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                In CSS, the term "box model" is used when talking about design and layout.In CSS, the
+                                term "box model" is used when talking about design and layout.Every box is composed of
+                                four parts (or areas), defined by their respective edges: the content edge, padding
+                                edge, border edge, and margin edge.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="headingfour">
+                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                                what is semantic tags?
+                            </button>
+                        </h2>
+                        <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                The HTML semantics refers to the tags that provide meaning to an HTML page rather than
+                                just presentation. It makes HTML more comprehensible by better defining the different
+                                sections and layout of web pages.The core characteristic of a semantic element is that
+                                it clearly communicated its meaning to both the developer and the browser. These
+                                elements clearly define its content.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- end accordion -->
 
     </main>
 
