--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Farid Edu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- for font awesome -->
+    <script src="https://kit.fontawesome.com/c87984dbc9.js" crossorigin="anonymous"></script>
     <!-- for css  -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="container">
+<body>
     <!-- header start -->
 
-    <header>
+    <header class="container">
         <!-- start navbar -->
 
         <section>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand fw-bold" href="#">Pro Edu</a>
+                    <a class="navbar-brand fw-bold" href="#">Farid Edu</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -121,7 +123,7 @@
 
     <!-- main start  -->
 
-    <main>
+    <main class="container">
         <!-- courses start  -->
 
         <section class="my-5">
@@ -381,7 +383,7 @@
             </div>
             <div class="my-5">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 clo-12">
                         <div class="card">
                             <img src="images/student/student-1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -390,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 clo-12">
                         <div class="card">
                             <img src="images/student/student-2.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -399,7 +401,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 clo-12">
                         <div class="card">
                             <img src="images/student/student-3.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -408,7 +410,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-lg-3 col-md-6 clo-12">
                         <div class="card">
                             <img src="images/student/student-4.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -520,10 +522,49 @@
         </section>
 
         <!-- end accordion -->
+        <!-- start company logo -->
+
+        <section class="my-5 d-none d-lg-block ">
+            <h1 class="text-center">Trusted by over 800+ companies</h1>
+            <div class="d-flex justify-content-around my-4">
+                <div><img class="w-75" src="images/company/company-1.png" alt=""></div>
+                <div><img class="w-75" src="images/company/company-2.png" alt=""></div>
+                <div><img class="w-75" src="images/company/company-3.png" alt=""></div>
+                <div><img class="w-75" src="images/company/company-4.png" alt=""></div>
+                <div><img class="w-75" src="images/company/company-5.png" alt=""></div>
+                <div><img class="w-75" src="images/company/company-6.png" alt=""></div>
+            </div>
+        </section>
+
+        <!-- end company logo -->
 
     </main>
 
     <!-- main end -->
+    <!-- footer start  -->
+
+    <footer class="bg-dark text-white d-flex flex-column
+    justify-content-center align-items-center py-5">
+        <div class="d-flex flex-column
+        justify-content-center align-items-center mt-5">
+            <h3>Farid Edu</h3>
+            <p>
+                <small>Level-4, 34, Awal Centre, Banani, Dhaka</small>
+            </p>
+            <p><small>
+                    Privacy Ploicy | Terms of use
+                </small></p>
+        </div>
+        <div>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+
+    </footer>
+
+    <!-- footer end  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
